event fix on typing

--- a/public/chat.html
+++ b/public/chat.html
@@ -78,8 +78,8 @@
       <input
         id="input"
         autocomplete="off"
-        onkeyup="emptyFunction()"
-        onkeydown="typeFunction()"
+        onfocusout="emptyFunction()"
+        onfocus="typeFunction()"
       /><button>Send</button>
     </form>
 
