--- a/public/privateChat.html
+++ b/public/privateChat.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Socket.IO chat</title>
+    <title>Hasham Chat</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -75,8 +75,8 @@
       <input
         id="input"
         autocomplete="off"
-        onkeyup="emptyFunction()"
-        onkeydown="typeFunction()"
+        onfocusout="emptyFunction()"
+        onfocus="typeFunction()"
       /><button>Send</button>
     </form>
 
